--- a/public/MainPage.html
+++ b/public/MainPage.html
@@ -22,7 +22,7 @@
 			</navigation>
 		</div>
 </header>
-
+<script src="javascripts/info.js"></script>
 <div class="herogrid">
 	<a id="1" href="heroinfo.html" onclick="Info(this.id)">
 		<div class="heroicon" style="background: url(images/1.png) no-repeat top">
